<resources>
    <string name="app_name">My App98</string>
    <string name="edit_message">Enter an AWESOME message</string>
    <string name="button_send">S.E.N.D</string>
    <string name="move_up">Go UP</string>

    <string name="action_settings">Settings</string>
    <string name="feedback">Status: No Status</string>
    <string name="F6">F6</string>
    <string name="F5">F5</string>
    <string name="F4">F4</string>
    <string name="F3">F3</string>
    <string name="F2">F2</string>
    <string name="SwitchAuto">Switch to Auto Mode</string>
    <string name="explore">Explore</string>
    <string name="SwitchManual">Switch to Manual Mode</string>
    <string name="F1">F1</string>
    <string name="manual"><u>Manual Mode</u></string>
    <string name="auto"><u>Auto Mode</u></string>
    <string name="manualMode">Manual Mode</string>
    <string name="autoMode">Auto Mode</string>
    <string name="update">Update</string>
    <string name="Switch">Gesture Settings</string>
    <string name="tvF1">F1</string>
    <string name="tvF2">F2</string>
    <string name="tvF3">Start</string>
    <string name="reset">Reset</string>
    <string name="savePref">Save</string>
    <string name="cancelPref">Cancel</string>
    <string name="startBtn">Start</string>
    <string name="sendStartBtn">Send Start</string>
    <string name="bb_status">Status</string>
    <string name="bb_timer">Timer</string>
    <string name="pathing">Pathing</string>
    <string name="setFunctionButton">Set Function Button</string>
    <string name="bt_settings_title">Bluetooth settings</string>


    <string name="timer_value">0:00:000</string>

</resources>
